--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qawolf/pr-testing-request-new-run-after-deploy-action",
-  "version": "v1.0.4",
+  "version": "v1.0.3",
   "type": "commonjs",
   "main": "dist/index.js",
   "engines": {
@@ -8,11 +8,10 @@
   },
   "scripts": {
     "gen": "npm run build",
-    "build": "cp tsconfig.json tsconfig.json.bak && cp tsconfig.build.json tsconfig.json && ncc build src/index.ts -o dist ; mv tsconfig.json.bak tsconfig.json",
+    "build": "ncc build src/index.ts -o dist",
     "build:clean": "tsc --build --clean && rm -rf ./dist",
     "lint": "eslint . --ext js,jsx,mjs,ts,tsx --quiet && prettier --check .",
-    "lint:fix": "eslint . --ext js,jsx,mjs,ts,tsx --fix --quiet && prettier --log-level=warn --write .",
-    "lint:warnings": "eslint . --ext js,jsx,mjs,ts,tsx",
+    "lint:fix": "eslint . --ext js,jsx,mjs,ts,tsx --fix --quiet && prettier --write .",
     "test": "jest --passWithNoTests",
     "test:watch": "npm run test -- --watch",
     "tsc:check": "tsc"
